# django_experiment

./: README.md  pyproject.toml
src/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: api.py  urls.py
